--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span><i class="ri-phone-line"></i></span>
                 <div class="call-us-2">
                     <p class="call-name">Call Us</p>
-                    <p class="call-no">+91 9876543210</p>
+                    <p class="call-no">+9876543210</p>
                 </div>
             </div>
             <div class="mail-us-12">
